--- a/Week1/css/screen.css
+++ b/Week1/css/screen.css
@@ -3,5 +3,22 @@
 /* Example: adding a background color to the HTML body */
 body {
   /* #ccc is shorthand HEX for a light grey */
-  background: #ccc;
+  background: #32A7AD;
 }
+<html>
+<head>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+a {
+    color: white;
+    padding: 16px;
+    text-decoration: none;
+}
+</style>
