--- a/Week5/selectors-demo/css/screen.css
+++ b/Week5/selectors-demo/css/screen.css
@@ -1,6 +1,11 @@
 /* Add your CSS below */
 
 /* Example: adding a background color to the HTML body */
+header {
+  /* #ccc is shorthand HEX for a light grey */
+  background: lightgreen;
+}
+
 body {
   /* #ccc is shorthand HEX for a light grey */
   background: #ccc;
@@ -15,6 +20,6 @@ nav {
 }
 
 #specific {
-  font-size: 5em;
+  font-size: 2em;
   font-family: Helvetica;
 }
