--- a/Final/final.css
+++ b/Final/final.css
@@ -11,7 +11,6 @@ White: #ffffff
 a:link {
 	color:#464646;
 	text-decoration:underline;
-
 	}
 
 a:hover {
@@ -19,47 +18,34 @@ a:hover {
 	text-decoration:underline;
 }
 
-a: visited {
-	color:#828282;
-}
-
-a:active {
-	background-color:#8A8A8A;
-}
-
-
-
 /* the html element below is the "background" of your page */
 html {
-	background-color:#EBF5FB;
+	background-color:#453130;
 }
 
 body {
-	width: 761px;
-	margin: 1.5em auto; /* this + a defined width, centers the body content */
-	padding: 50px;
-	background-color: #63FAFE;
+	width: 800px;
+	margin: 0em auto; /* this + a defined width, centers the body content */
+	padding: 20px;
+	background-color: #eaeaea;
 }
 
 #nav {
 	list-style-type: none;
-	background-color: #C0BDBD;
-	border-color: #565656;
-	border-style: solid;
-	border-width: 10px;
-	width: 400px;
-	padding: 15px;
-	text-align: center;
+	background-color: #edb793;
+	width: 800px;
+	padding: 5px;
+	text-align: left;
 	margin-left: auto;
 	margin-right: auto;
-
-
 }
 
 #nav a {
-	color:#464646;
+	color: #171813;
+  font-family: sylfaen, sans-serif;
+	font-weight: bold;
 	text-decoration:none;
-	padding: 10px;
+	padding: 20px;
 
 }
 
@@ -68,46 +54,42 @@ display:inline;
 }
 
 #nav a:hover {
-	color:#F8FF00;
 	text-decoration:underline;
-
-}
-a: visited {
-	color:#828282;
-}
-
-a:active {
-	background-color:#8A8A8A;
 }
 
 
 h1 {
-	text-align: center;
-	background-color: #FF9B8B;
-	color: #22242C;
+	color: #171813;
+  font-family: sylfaen, sans-serif;
+	font-weight: bold;
 }
 
 h2 {
-	padding: 7px;
-	color: #22242C;
+	color: #171813;
+	font-family: sylfaen, sans-serif;
+	font-weight: bold;
 }
 
 h3 {
-	color: #1C705A;
+	color: #171813;
+	font-family: sylfaen, sans-serif;
+	font-weight: bold;
 }
 
 /* IMPORTANT: this will put a border around ALL images - so the banner AND the image of you. You may want to remove the border or change it! */
 img {
 	float: right;
-	border-color: #4F0001;
-	border-style: solid;
-	border-width: 2px;
+	margin: 0 0 10px 10px;
 }
 
 
 /* The code below here alters your links */
 a {
   font-weight: bold;
+}
+
+b {
+  clear: left;
 }
 
 a:hover {
@@ -117,6 +99,9 @@ a:hover {
 
 p {
 	padding-right: 240px;
+	color: #4a4e11;
+	font-family: sylfaen, sans-serif;
+	font-size: 18px;
 }
 
 div {
